# luca-py

./: AGENTS.agent.md  AGENTS.client.md  AGENTS.md  LICENSE  README.md  luca.schema.json  main.py  pyproject.toml
.claude/skills/textual-tui/: SKILL.md
docs/: README.md  llm.txt
docs/agent/: 01-quickstart.md  02-data-model.md  03-tools.md  04-runner.md  05-permissions.md  06-system-prompts.md  07-middleware.md  08-runtime-config.md  09-plugins.md  10-projection.md  11-context-and-usage.md  README.md
docs/agent/contrib/: README.md
docs/client/: 01-installation.md  02-quickstart.md  03-architecture.md  04-chat-completion.md  05-messages-and-content.md  06-tools.md  07-structured-output.md  08-streaming.md  09-providers-and-transports.md  10-catalog.md  11-exceptions.md  12-testing.md  13-roadmap.md  README.md  data_sample.md  data_sample_streaming.md
luca/: __main__.py  cli.py
luca/agent/: __init__.py
luca/agent/contrib/: __init__.py
luca/agent/core/: __init__.py  adapter.py  context.py  context_manager.py  events.py  ledger.py  (+8 more)
luca/client/: __init__.py  _client.py  exceptions.py  testing.py
tests/: test_cli_entry.py
tests/agent/: scenarios.py  test_adapter.py  test_context_manager.py  test_ledger.py  test_models.py  test_projection.py  test_runner.py  test_runner_approvals.py  test_runner_cancellation.py  test_runner_context.py  test_runner_failures.py  test_runner_lifecycle.py  test_runner_limits.py  test_runner_middleware.py  test_runner_projector.py  test_runner_system_prompt.py  test_runner_tool_output.py  test_tools.py
tests/client/: conftest.py
(+154 files in other folders)
