[project]
name = "luca-ai"
version = "0.1.0"
description = "AI Agent Toolkit and unified LLM access client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.14.1",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.2.2",
]
docker = [
    "aiodocker>=0.27.0",
]
tui = [
    "textual>=8.2.8",
    "textual-dev>=1.8.0",
]
ssh = [
    "asyncssh>=2.24.0",
    "paramiko>=5.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "-W", "error::ResourceWarning",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore:The frame locals reference is no longer cached.*:DeprecationWarning",
]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev", "tui"]

[tool.hatch.build.targets.wheel]
packages = ["luca"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
